# quizrush

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_quizzes.sql  20240101000003_create_questions_answers.sql  20240101000004_create_game_tables.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/errors/: mod.rs
backend/src/game/: engine.rs  mod.rs  player.rs  room.rs
backend/src/handlers/: auth.rs  game.rs  mod.rs  quiz.rs  websocket.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
frontend/src/animations/: variants.js
frontend/src/components/: AvatarPicker.jsx  Button.jsx  Input.jsx  PlayerAvatar.jsx  ThreeBackground.jsx
frontend/src/hooks/: useTimer.js  useWebSocket.js
frontend/src/pages/: Join.jsx  Landing.jsx  PlayerGame.jsx  PlayerLobby.jsx  PlayerResults.jsx  QRCode.jsx
frontend/src/pages/auth/: Login.jsx  Register.jsx
frontend/src/pages/dashboard/: Dashboard.jsx
frontend/src/pages/game/: GameLobby.jsx  HostGame.jsx  HostResults.jsx
frontend/src/pages/quiz/: QuizBuilder.jsx
frontend/src/services/: api.js
frontend/src/store/: authStore.js  gameStore.js
frontend/src/utils/: helpers.js
